初始化插件

--- a/.gitignore
+++ b/.gitignore
@@ -46,3 +46,26 @@
 
 # Embedded web-server pid file
 /.web-server-pid
+.DS_Store
+
+# customs
+/jobs/caches/
+/logs/
+composer.lock
+public/upload/*
+public/res/*
+public/tmp/*
+public/data/*
+/data/
+.idea/
+# test
+/test/
+
+# 去掉plugins 另外项目管理
+plugins/
+# 去掉manage 另外项目管理
+manager/
+# 去掉miniapp 另外项目管理
+miniapp
+# 去掉ngeditor 另外项目管理
+ngeditor
